syntax = "proto3";

package mycode;

option go_package=".;mycode";

enum Language {
  c = 0;
  cpp = 1;
  go = 2;
  java = 3;
  pascal = 4;
  python = 5;
}

message Code {
  int64 solution_test_id = 1;
  Language language = 2;
  string source = 3;
  string stdin = 4;
  Language checker_language = 5;
  string checker_source = 6;
  bool with_checker = 7;
}

message Run {
  int64 solution_test_id = 1;
  string duration = 2;
  string used_memory = 3;
  string stdout = 4;
  string stderr = 5;
  string checker_stdout = 6;
  string checker_stderr = 7;
}
